add css design elements and create basic calculator layout with dummy buttons

--- a/index.html
+++ b/index.html
@@ -8,40 +8,38 @@
     <body>
         <div class="calc-body">
             <div class="display-container">
-                <div class="display-frame">
-
-                </div>
+                <div id="display-frame"><p>0000</p></div>
             </div>
             <div class="key-container">
-                <div class="function-row">
-                    <div id="fn1"></div>
-                    <div id="fn2"></div>
-                    <div id="fn3"></div>
-                    <div id="fn4"></div>
+                <div class="row" id="function-row">
+                    <div class="key" id="fn1"><p>fn1</p></div>
+                    <div class="key" id="fn2"><p>fn2</p></div>
+                    <div class="key" id="fn3"><p>fn3</p></div>
+                    <div class="key" id="fn4"><p>fn4</p></div>
                 </div>
-                <div class="row1">
-                    <div id="key7"></div>
-                    <div id="key8"></div>
-                    <div id="key9"></div>
-                    <div id="divkey"></div>
+                <div class="row">
+                    <div class="key" id="key7"><p>7</p></div>
+                    <div class="key" id="key8"><p>8</p></div>
+                    <div class="key" id="key9"><p>9</p></div>
+                    <div class="key" id="divkey"><p>/</p></div>
                 </div>
-                <div class="row2">
-                    <div id="key4"></div>
-                    <div id="key5"></div>
-                    <div id="key6"></div>
-                    <div id="multikey"></div>
+                <div class="row">
+                    <div class="key" id="key4"><p>4</p></div>
+                    <div class="key" id="key5"><p>5</p></div>
+                    <div class="key" id="key6"><p>6</p></div>
+                    <div class="key" id="multikey"><p>x</p></div>
                 </div>
-                <div class="row3">
-                    <div id="key1"></div>
-                    <div id="key2"></div>
-                    <div id="key3"></div>
-                    <div id="subkey"></div>
+                <div class="row">
+                    <div class="key" id="key1"><p>1</p></div>
+                    <div class="key" id="key2"><p>2</p></div>
+                    <div class="key" id="key3"><p>3</p></div>
+                    <div class="key" id="subkey"><p>-</p></div>
                 </div>
-                <div class="row4">
-                    <div id="key0"></div>
-                    <div id="decikey"></div>
-                    <div id="equalkey"></div>
-                    <div id="addkey"></div>
+                <div class="row">
+                    <div class="key" id="key0"><p>0</p></div>
+                    <div class="key" id="decikey"><p>.</p></div>
+                    <div class="key" id="equalkey"><p>=</p></div>
+                    <div class="key" id="addkey"><p>+</p></div>
                 </div>
             </div>
         </div>
