--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
             </div>
             <div class="key-container">
                 <div class="row" id="function-row">
-                    <div class="key" id="fn1"><p>fn1</p></div>
-                    <div class="key" id="fn2"><p>fn2</p></div>
-                    <div class="key" id="fn3"><p>fn3</p></div>
-                    <div class="key" id="fn4"><p>fn4</p></div>
+                    <button class="key" type="button" id="fn1"><p>+/-</p></button>
+                    <button class="key" type="button" id="fn2"><p>%</p></button>
+                    <button class="key" type="button" id="fn3"><p>clear</p></button>
+                    <button class="key" type="button" id="fn4"><p>power</p></button>
                 </div>
                 <div class="row">
-                    <div class="key" id="key7"><p>7</p></div>
-                    <div class="key" id="key8"><p>8</p></div>
-                    <div class="key" id="key9"><p>9</p></div>
-                    <div class="key" id="divkey"><p>/</p></div>
+                    <button class="key" type="button" id="key7"><p>7</p></button>
+                    <button class="key" type="button" id="key8"><p>8</p></button>
+                    <button class="key" type="button" id="key9"><p>9</p></button>
+                    <button class="key" type="button" id="divkey"><p>/</p></button>
                 </div>
                 <div class="row">
-                    <div class="key" id="key4"><p>4</p></div>
-                    <div class="key" id="key5"><p>5</p></div>
-                    <div class="key" id="key6"><p>6</p></div>
-                    <div class="key" id="multikey"><p>x</p></div>
+                    <button class="key" type="button" id="key4"><p>4</p></button>
+                    <button class="key" type="button" id="key5"><p>5</p></button>
+                    <button class="key" type="button" id="key6"><p>6</p></button>
+                    <button class="key" type="button" id="multikey"><p>x</p></button>
                 </div>
                 <div class="row">
-                    <div class="key" id="key1"><p>1</p></div>
-                    <div class="key" id="key2"><p>2</p></div>
-                    <div class="key" id="key3"><p>3</p></div>
-                    <div class="key" id="subkey"><p>-</p></div>
+                    <button class="key" type="button" id="key1"><p>1</p></button>
+                    <button class="key" type="button" id="key2"><p>2</p></button>
+                    <button class="key" type="button" id="key3"><p>3</p></button>
+                    <button class="key" type="button" id="subkey"><p>-</p></button>
                 </div>
                 <div class="row">
-                    <div class="key" id="key0"><p>0</p></div>
-                    <div class="key" id="decikey"><p>.</p></div>
-                    <div class="key" id="equalkey"><p>=</p></div>
-                    <div class="key" id="addkey"><p>+</p></div>
+                    <button class="key" type="button" id="key0"><p>0</p></button>
+                    <button class="key" type="button" id="decikey"><p>.</p></button>
+                    <button class="key" type="button" id="equalkey"><p>=</p></button>
+                    <button class="key" type="button" id="addkey"><p>+</p></button>
                 </div>
             </div>
         </div>
