--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html></p></div>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -12,34 +12,34 @@
             </div>
             <div class="key-container">
                 <div class="row" id="function-row">
-                    <button class="key" type="button" id="fn1"><p>+/-</p></button>
-                    <button class="key" type="button" id="fn2"><p>%</p></button>
-                    <button class="key" type="button" id="fn3"><p>clear</p></button>
-                    <button class="key" type="button" id="fn4"><p>power</p></button>
+                    <button class="key" type="button" id="fn1">+/-</button>
+                    <button class="key" type="button" id="fn2">%</button>
+                    <button class="key" type="button" id="fn3">clear</button>
+                    <button class="key" type="button" id="fn4">power</button>
                 </div>
                 <div class="row">
-                    <button class="key" type="button" id="key7"><p>7</p></button>
-                    <button class="key" type="button" id="key8"><p>8</p></button>
-                    <button class="key" type="button" id="key9"><p>9</p></button>
-                    <button class="key" type="button" id="divkey"><p>/</p></button>
+                    <button class="key" type="button" id="key7">7</button>
+                    <button class="key" type="button" id="key8">8</button>
+                    <button class="key" type="button" id="key9">9</button>
+                    <button class="key" type="button" id="divkey">/</button>
                 </div>
                 <div class="row">
-                    <button class="key" type="button" id="key4"><p>4</p></button>
-                    <button class="key" type="button" id="key5"><p>5</p></button>
-                    <button class="key" type="button" id="key6"><p>6</p></button>
-                    <button class="key" type="button" id="multikey"><p>x</p></button>
+                    <button class="key" type="button" id="key4">4</button>
+                    <button class="key" type="button" id="key5">5</button>
+                    <button class="key" type="button" id="key6">6</button>
+                    <button class="key" type="button" id="multikey">x</button>
                 </div>
                 <div class="row">
-                    <button class="key" type="button" id="key1"><p>1</p></button>
-                    <button class="key" type="button" id="key2"><p>2</p></button>
-                    <button class="key" type="button" id="key3"><p>3</p></button>
-                    <button class="key" type="button" id="subkey"><p>-</p></button>
+                    <button class="key" type="button" id="key1">1</button>
+                    <button class="key" type="button" id="key2">2</button>
+                    <button class="key" type="button" id="key3">3</button>
+                    <button class="key" type="button" id="subkey">-</button>
                 </div>
                 <div class="row">
-                    <button class="key" type="button" id="key0"><p>0</p></button>
-                    <button class="key" type="button" id="decikey"><p>.</p></button>
-                    <button class="key" type="button" id="equalkey"><p>=</p></button>
-                    <button class="key" type="button" id="addkey"><p>+</p></button>
+                    <button class="key" type="button" id="key0">0</button>
+                    <button class="key" type="button" id="decikey">.</button>
+                    <button class="key" type="button" id="equalkey">=</button>
+                    <button class="key" type="button" id="addkey">+</button>
                 </div>
             </div>
         </div>
