refactor codebase for variable consistency, add 'calculate-at-operand' functionality, and set a height for the 'screen'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="calc-body">
             <div class="display-container">
-                <div id="display-frame">0000</div>
+                <div id="display-frame"></div>
             </div>
             <div class="key-container">
                 <div class="row" id="function-row">
